--- a/config.json
+++ b/config.json
@@ -1,31 +1,86 @@
 {
-    "3d": {
-        "0": [100, 0, 0],
-        "0.5": [0, 0, 100]
-    },
-    "flash": {
+    "None": {
         "length": 1,
         "beats":{
-            "0": [100, 100, 100],
-            "0.5": [0, 0, 0]
-        }
-        
+            "1": [0, 0, 0]
+        } 
     },
-    "test": {
+    "RGB": {
+        "length": 1,
+        "beats":{
+            "1": [100, 0, 0, "hold"],
+            "1.33": [0, 100, 0, "hold"],
+            "1.66": [0, 0, 100, "hold"]
+        } 
+    },
+    "Rainbow": {
         "length": 4,
         "beats":{
-            "0": [100, 0, 0],
-            "1": [0, 100, 0]
-        }
-        
+            "1": [100, 0, 0],
+            "2.33": [0, 100, 0],
+            "3.66": [0, 0, 100]
+        } 
     },
-    "red": {
-        "0": [100, 0, 0]
+    "Strobe": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.5": [0, 0, 0]
+        } 
     },
-    "rgb": {
-        "0": [100, 0, 0],
-        "1": [0, 100, 0],
-        "2": [0, 0, 100],
-        "3": [100, 100, 100]
+    "Flash": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.04": [0, 0, 0, "hold"],
+            "1.25": [100, 100, 100],
+            "1.29": [0, 0, 0, "hold"],
+            "1.5": [100, 100, 100],
+            "1.54": [0, 0, 0, "hold"],
+            "1.75": [100, 100, 100],
+            "1.79": [0, 0, 0, "hold"]
+        } 
+    },
+    "Pulse": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
+    },
+    "Pulse1": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
+    },
+    "Pulse2": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
+    },
+    "Pulse3": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
+    },
+    "Pulse4": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
+    },
+    "Pulse5": {
+        "length": 1,
+        "beats":{
+            "1": [100, 100, 100],
+            "1.96": [0, 0, 0]
+        } 
     }
 }
