--- a/config.json
+++ b/config.json
@@ -1,80 +1,113 @@
 {
-    "RGB": {
+    "Red": {
         "length": 1,
         "beats":{
-            "1": [100, 0, 0, "hold"],
-            "1.33": [0, 100, 0, "hold"],
-            "1.66": [0, 0, 100, "hold"]
+            "1": [100, 0, 0, 100, 0, 0, 0]
+        } 
+    },
+    "Green": {
+        "length": 1,
+        "beats":{
+            "1": [0, 100, 0, 0, 100, 0, 0]
+        } 
+    },
+    "Blue": {
+        "length": 1,
+        "beats":{
+            "1": [0, 0, 100, 0, 0, 100, 0]
+        } 
+    },
+    "UV": {
+        "length": 1,
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 100]
+        } 
+    },
+    "Red Top Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [100, 0, 0, 0, 0, 0, 0],
+            "2": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
+    "Red Bottom Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0],
+            "2": [0, 0, 0, 100, 0, 0, 0]
+        } 
+    },
+    "Green Top Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 100, 0, 0, 0, 0, 0],
+            "2": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
+    "Green Bottom Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0],
+            "2": [0, 0, 0, 0, 100, 0, 0]
+        } 
+    },
+    "Blue Top Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 0, 100, 0, 0, 0, 0],
+            "2": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
+    "Blue Bottom Flash": {
+        "length": 2,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0],
+            "2": [0, 0, 0, 0, 0, 100, 0]
+        } 
+    },
+    "RGB": {
+        "length": 3,
+        "interpolation": "hold",
+        "beats":{
+            "1": [100, 0, 0, 100, 0, 0, 0],
+            "2": [0, 100, 0, 0, 100, 0, 0],
+            "3": [0, 0, 100, 0, 0, 100, 0]
         } 
     },
     "Rainbow": {
-        "length": 4,
+        "length": 3,
         "beats":{
-            "1": [100, 0, 0],
-            "2.33": [0, 100, 0],
-            "3.66": [0, 0, 100]
+            "1": [100, 0, 0, 100, 0, 0, 0],
+            "2": [0, 100, 0, 0, 100, 0, 0],
+            "3": [0, 0, 100, 0, 0, 100, 0]
         } 
     },
     "Strobe": {
         "length": 1,
         "beats":{
-            "1": [100, 100, 100],
-            "1.5": [0, 0, 0]
+            "1": [100, 100, 100, 100, 100, 100, 100],
+            "1.5": [0, 0, 0, 0, 0, 0, 0]
         } 
     },
     "Flash": {
-        "length": 1,
+        "length": 0.25,
+        "interpolation": "hold",
         "beats":{
-            "1": [100, 100, 100],
-            "1.04": [0, 0, 0, "hold"],
-            "1.25": [100, 100, 100],
-            "1.29": [0, 0, 0, "hold"],
-            "1.5": [100, 100, 100],
-            "1.54": [0, 0, 0, "hold"],
-            "1.75": [100, 100, 100],
-            "1.79": [0, 0, 0, "hold"]
+            "1": [100, 100, 100, 100, 100, 100, 100],
+            "1.04": [0, 0, 0, 0, 0, 0, 0]
         } 
     },
     "Pulse": {
         "length": 1,
         "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
-        } 
-    },
-    "Pulse1": {
-        "length": 1,
-        "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
-        } 
-    },
-    "Pulse2": {
-        "length": 1,
-        "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
-        } 
-    },
-    "Pulse3": {
-        "length": 1,
-        "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
-        } 
-    },
-    "Pulse4": {
-        "length": 1,
-        "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
-        } 
-    },
-    "Pulse5": {
-        "length": 1,
-        "beats":{
-            "1": [100, 100, 100],
-            "1.96": [0, 0, 0]
+            "1": [100, 100, 100, 100, 100, 100, 100],
+            "1.96": [0, 0, 0, 0, 0, 0, 0]
         } 
     }
 }
