--- a/config.json
+++ b/config.json
@@ -55,6 +55,14 @@
             "2": [0, 0, 0, 0, 100, 0, 0]
         } 
     },
+    "Blue Top Flash Double": {
+        "length": 1,
+        "interpolation": "hold",
+        "beats":{
+            "1": [0, 0, 100, 0, 0, 0, 0],
+            "1.5": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
     "Blue Top Flash": {
         "length": 2,
         "interpolation": "hold",
@@ -107,6 +115,13 @@
         "length": 1,
         "beats":{
             "1": [100, 100, 100, 100, 100, 100, 100],
+            "1.96": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
+    "Nothing": {
+        "length": 1,
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0],
             "1.96": [0, 0, 0, 0, 0, 0, 0]
         } 
     }
