--- a/config.json
+++ b/config.json
@@ -127,5 +127,33 @@
             "1": [100, 100, 100, 100, 100, 100, 100],
             "1.96": [0, 0, 0, 0, 0, 0, 0]
         } 
+    },
+    "Slow UV 8": {
+        "length": 8,
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0],
+            "7.5": [0, 0, 0, 0, 0, 0, 35],
+            "8.96": [0, 0, 0, 0, 0, 0, 100]
+        } 
+    },
+    "Shelter ay 4": {
+        "length": 4,
+        "beats":{
+            "1": [100, 0, 0, 0, 0, 0, 0],
+            "1.1": [0, 0, 0, 0, 0, 0, 0],
+            "2": [0, 100, 0, 0, 0, 0, 0],
+            "2.1": [0, 0, 0, 0, 0, 0, 0],
+            "2.5": [0, 0, 100, 0, 0, 0, 0],
+            "2.6": [0, 0, 0, 0, 0, 0, 0],
+            "3": [100, 100, 0, 0, 0, 0, 0],
+            "3.1": [0, 0, 0, 0, 0, 0, 0],
+            "3.96": [0, 0, 0, 0, 0, 0, 0]
+        } 
+    },
+    "Nothing": {
+        "length": 1,
+        "beats":{
+            "1": [0, 0, 0, 0, 0, 0, 0]
+        } 
     }
 }
