--- a/config.json
+++ b/config.json
@@ -3,43 +3,43 @@
         "length": 1,
         "beats":{
             "1": [100, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Green Top": {
         "length": 1,
         "beats":{
             "1": [0, 100, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Blue Top": {
         "length": 1,
         "beats":{
             "1": [0, 0, 100, 0, 0, 0, 0]
-        } 
+        }
     },
     "Red Bottom": {
         "length": 1,
         "beats":{
             "1": [0, 0, 0, 100, 0, 0, 0]
-        } 
+        }
     },
     "Green Bottom": {
         "length": 1,
         "beats":{
             "1": [0, 0, 0, 0, 100, 0, 0]
-        } 
+        }
     },
     "Blue Bottom": {
         "length": 1,
         "beats":{
             "1": [0, 0, 0, 0, 0, 100, 0]
-        } 
+        }
     },
     "UV": {
         "length": 1,
         "beats":{
             "1": [0, 0, 0, 0, 0, 0, 100]
-        } 
+        }
     },
     "Red Top Flash": {
         "length": 2,
@@ -47,7 +47,7 @@
         "beats":{
             "1": [100, 0, 0, 0, 0, 0, 0],
             "2": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Red Bottom Flash": {
         "length": 2,
@@ -55,7 +55,7 @@
         "beats":{
             "1": [0, 0, 0, 0, 0, 0, 0],
             "2": [0, 0, 0, 100, 0, 0, 0]
-        } 
+        }
     },
     "Green Top Flash": {
         "length": 2,
@@ -63,7 +63,7 @@
         "beats":{
             "1": [0, 100, 0, 0, 0, 0, 0],
             "2": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Green Bottom Flash": {
         "length": 2,
@@ -71,7 +71,7 @@
         "beats":{
             "1": [0, 0, 0, 0, 0, 0, 0],
             "2": [0, 0, 0, 0, 100, 0, 0]
-        } 
+        }
     },
     "Blue Top Flash": {
         "length": 2,
@@ -79,7 +79,7 @@
         "beats":{
             "1": [0, 0, 100, 0, 0, 0, 0],
             "2": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Blue Bottom Flash": {
         "length": 2,
@@ -87,7 +87,7 @@
         "beats":{
             "1": [0, 0, 0, 0, 0, 0, 0],
             "2": [0, 0, 0, 0, 0, 100, 0]
-        } 
+        }
     },
     "RGB": {
         "length": 3,
@@ -96,7 +96,7 @@
             "1": [100, 0, 0, 100, 0, 0, 0],
             "2": [0, 100, 0, 0, 100, 0, 0],
             "3": [0, 0, 100, 0, 0, 100, 0]
-        } 
+        }
     },
     "Rainbow": {
         "length": 3,
@@ -104,14 +104,14 @@
             "1": [100, 0, 0, 100, 0, 0, 0],
             "2": [0, 100, 0, 0, 100, 0, 0],
             "3": [0, 0, 100, 0, 0, 100, 0]
-        } 
+        }
     },
     "Strobe": {
         "length": 1,
         "beats":{
             "1": [100, 100, 100, 100, 100, 100, 100],
             "1.5": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Flash": {
         "length": 0.25,
@@ -119,14 +119,14 @@
         "beats":{
             "1": [100, 100, 100, 100, 100, 100, 100],
             "1.04": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Pulse": {
         "length": 1,
         "beats":{
             "1": [100, 100, 100, 100, 100, 100, 100],
             "1.96": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Slow UV 8": {
         "length": 8,
@@ -134,7 +134,14 @@
             "1": [0, 0, 0, 0, 0, 0, 0],
             "7.5": [0, 0, 0, 0, 0, 0, 35],
             "8.96": [0, 0, 0, 0, 0, 0, 100]
-        } 
+        }
+    },
+    "Yellow to red": {
+        "length": 1,
+        "beats":{
+            "1": [100, 0, 0, 0, 0, 0, 0],
+            "1.96": [100, 75, 0, 0, 0, 0, 0]
+        }
     },
     "Shelter ay 4": {
         "length": 4,
@@ -148,12 +155,12 @@
             "3": [100, 100, 0, 0, 0, 0, 0],
             "3.1": [0, 0, 0, 0, 0, 0, 0],
             "3.96": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     },
     "Nothing": {
         "length": 1,
         "beats":{
             "1": [0, 0, 0, 0, 0, 0, 0]
-        } 
+        }
     }
 }
