--- a/config.json
+++ b/config.json
@@ -128,6 +128,13 @@
             "1.96": [0, 0, 0, 0, 0, 0, 0]
         }
     },
+    "Chill": {
+        "length": 60,
+        "beats":{
+            "1": [50, 60, 0, 10, 50, 100, 0],
+            "30": [80, 60, 0, 20, 50, 0, 0]
+        }
+    },
     "Slow UV 8": {
         "length": 8,
         "beats":{
