--- a/config.json
+++ b/config.json
@@ -135,6 +135,13 @@
             "30": [80, 60, 0, 20, 50, 0, 0]
         }
     },
+    "Chill2": {
+        "length": 60,
+        "beats":{
+            "1": [30, 20, 0, 10, 10, 0, 0],
+            "30": [40, 10, 0, 10, 0, 20, 0]
+        }
+    },
     "Slow UV 8": {
         "length": 8,
         "beats":{
