--- a/config.json
+++ b/config.json
@@ -142,6 +142,14 @@
             "30": [40, 10, 0, 10, 0, 20, 0]
         }
     },
+    "SlowYPO": {
+        "length": 90,
+        "beats":{
+            "1": [10, 5, 0, 0, 0, 0, 0],
+            "30": [0, 10, 5, 0, 5, 10, 0],
+            "60": [5, 10, 10, 0, 0, 0, 0]
+        }
+    },
     "Slow UV 8": {
         "length": 8,
         "beats":{
