--- a/config.json
+++ b/config.json
@@ -1,4 +1,11 @@
 {
+    "Brake": {
+        "length": 1,
+        "hold": true,
+        "beats":{
+            "1": [-10000, -10000, -10000, -10000, -10000, -10000, -10000]
+        } 
+    },
     "Red Top": {
         "length": 1,
         "beats":{
