--- a/configs/config.json
+++ b/configs/config.json
@@ -33,12 +33,11 @@
         }
     },
     "Show 1":{
-        "length": 64,
+        "length": 8,
+        "loop": false,
         "beats":{
             "1": [["Hat", 32, 1, 1, 0], ["Bassline", 4, 0, 1, 0]],
-            "5": [["Bassline", 28, 1, 1, 4]],
-            "37": [["Hat", 3, 1, 1, 0], ["Bassline", 3, 1, 1, 0]], 
-            "41": [["Hat", 24, 1, 1, 4], ["Bassline 2", 24, 1, 1, 4]]
+            "5": [["Bassline", 28, 1, 1, 4]]
         }
     }
 }
