--- a/configs/config.json
+++ b/configs/config.json
@@ -39,5 +39,19 @@
             "1": [["Hat", 32, 1, 1, 0], ["Bassline", 4, 0, 1, 0]],
             "5": [["Bassline", 28, 1, 1, 4]]
         }
+    },
+    "Hat 4 bar":{
+        "length": 1,
+        "beats":{
+            "1": [[0, 0, 100, 0, 0, 0, 0], 0.25, 1, 1]
+        }
+    },
+    "Musician Show":{
+        "length": 8,
+        "loop": false,
+        "delay": 1,
+        "beats":{
+            "1": [["Hat 4 bar", 32, 1, 1, 0]]
+        }
     }
 }
