Make websocket connection resilient in the bridge

--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,4 @@ use_server=1
 server_ip=127.0.0.1
 
 [Output Files]
-OutputFile=0;0;0;%title% quytdhsdg %key%, %rt_master_time%, %rt_master_bpm%, %rt_master_total_time% 
+OutputFile=0;0;0;%title% quytdhsdg %key%, %rt_master_time%, %rt_master_bpm%, %rt_master_total_time%, %bpm%
