--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ src/libprojectM/config.inp.b
 src/libprojectM/config.inp.in
 src/projectM-emscripten/build/presets
 winamp/projectm/presets/presets-cream-of-the-crop
+winamp/build
 old
 project.xcworkspace
 *.o
