--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ test_sdl2
 CMakeConfigureLog.yaml
 xcuserdata
 src/libprojectM/config.inp
+projectm/vendor/projectm-eval/projectm-eval/projectM-Eval/projectM-EvalConfigVersion.cmake
 src/libprojectM/config.inp.b
 src/libprojectM/config.inp.in
 src/projectM-emscripten/build/presets
