--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ src/projectM-emscripten/build/presets
 winamp/projectm/presets/presets-cream-of-the-crop
 winamp/build
 old
+*.dylib
+projectM-EvalConfigVersion.cmake
 project.xcworkspace
 *.o
 *.lo
